--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+main{
+  min-height: calc(100vh - 90px);
+}
 /* HEADER STYLING */
 .header-container{
   display: flex;
@@ -44,7 +47,28 @@
 .header-button-container > button{
   letter-spacing: .045em;
 }
-
+/* FOOTER STYLING */
+.footer-container{
+  height: 80px;
+}
+.footer-container{
+  text-align: center;
+  /* margin-bottom: 10px; */
+}
+.made-by{
+  margin-bottom: 5px;
+}
+.made-by > a{
+  text-decoration: underline;
+  color: orange;
+}
+.delete-blurb{
+  padding: 0px 37px;
+  font-size: 0.75rem;
+}
+.email{
+  text-decoration: underline;
+}
 /* HERO STYLING */
 .hero-container{
   padding: 24px 12px;
@@ -140,7 +164,7 @@
 .grid > div {
   text-align: center;
   font-size: 1.2em;
-  padding: 2em 1em;
+  padding: 0.5em 0.2em;
   background-color: rgb(239, 239, 230); 
   color: rgb(0, 0, 0);
   border-radius: 6px;
@@ -149,6 +173,7 @@
   justify-content: center;
   display: flex;
   align-items: center;
+  overflow-wrap: anywhere;
 }
 .grid{
   margin: 24px auto;
@@ -682,7 +707,13 @@ button[id~="submit"]{
     padding: 6px; 
   }
   .grid > div{
-    font-size: 0.9em;
+    font-size: 1.5vh;
+    padding: 1px;
+    font-weight: 680;
+    overflow-wrap: unset;
+  }
+  .gap-2{
+    gap: 0.3rem;
   }
   .instructions-modal-container{
     width: 342px;
@@ -711,9 +742,14 @@ button[id~="submit"]{
     display: flex;
     width: 363px;
     flex-direction: column;
+    margin: 0 auto;
   }
   .create-game-title{
     margin: 15px 0px 0px 0px;
+  }
+  .create-game-form > button{
+    width: 365px;
+    margin: 0 auto;
   }
   .header-container{
     padding: 0px;
@@ -722,4 +758,11 @@ button[id~="submit"]{
     width: 70%;
     margin: 0 auto;
   } 
+  .delete-blurb{
+    padding: 0px 37px;
+    font-size: 0.7rem;
+  }
+  .footer-container{
+      margin-bottom: 10px;
+  }
 }
