custom pages link updates

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -429,6 +429,9 @@ button[id~="submit"]{
   gap: 15px;
   padding: 10px 15px;
 }
+.custom-games-container > a{
+  width: fit-content;
+}
 .custom-games-container > p{
   cursor: pointer;
 }
